--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Insert Title Here! </title>
+    <title> Welcome to Mockingbird! </title>
 
     <!-- Libraries -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
@@ -16,7 +16,7 @@
   <body>
 
     <header>
-      <nav>
+      <nav>   
         <h2>Job-Search</h2>
       </nav>
     </header>
@@ -24,13 +24,27 @@
       <!-- automatically retrieve this later -->
       <div class="container">
 
-        <input id="location" class="col-xs-2 col-xs-offset-1" type="text" name="" value="">
+        <input id="location" class="col-xs-2 col-xs-offset-1" type="text" name="" value="input text">
+        <input id="location2" class="col-xs-2 col-xs-offset-1" type="text" name="" value="input text">
         <select class="col-xs-2 col-xs-offset-2" name="">
           <option value="Food">Food</option>
           <option value="Retail">Retail</option>
           <option value="Internships">Internships</option>
         </select>
-        <button type="button" class="col-xs-2 col-xs-offset-2" name="button">Submit</button>
+        <button type="button" class="col-xs-2_col-xs-offset-2" name="button">Submit</button>
+      </div>
+      <div id="spec_div">
+         <ul>
+          <li>
+           option 1
+            </li>
+          <li>
+           option 2
+            </li>
+          <li>
+           option 3
+            </li>
+         </ul>
       </div>
       <div class="container">
         <div class="row col-xs-12">test</div>
@@ -45,7 +59,7 @@
     </section>
 
     <footer>
-      <h3> Job-Search By Joel and Luis at Google </h3>
+      <h3> Job-Search By Joel, Luis and Yves at Google </h3>
     </footer>
 
   </body>
